<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DoTopia</string>
    <string name="action_settings">Settings</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="email_hint">Email</string>
    <string name="zip_code_hint">Zip code</string>

    <!-- Screen titles -->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="empty_field_error_msg">cannot be empty</string>
    <string name="invalid_email_error_msg">Invalid email</string>
    <string name="register_today">Not a member? Register today!</string>

    <!-- Menu -->
        <!-- User -->
    <string name="account">Account</string>
    <string name="community">Community</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="goals">Goals</string>

        <!-- Other top level items -->
    <string name="give">Give</string>
    <string name="gift">Gift</string>
    <string name="redeem">Redeem</string>
    <string name="invite">Invite</string>
    <string name="buy">Buy</string>
    <string name="learn">Learn</string>
    <string name="home">Home</string>

        <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="about">About</string>
    <string name="faq">F.A.Q.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="logout">Logout</string>
    <string name="buy_upper">BUY</string>
    <string name="contact_us"><u>Contact us ></u></string>
    <string name="redeem_upper">REDEEM</string>
    <string name="gift_upper">GIFT</string>
    <string name="give_upper">GIVE</string>
    <string name="give_now_upper">GIVE NOW></string>
    <string name="account_upper">ACCOUNT</string>
    <string name="search_for_non_profit_label">SEARCH FOR NON-PROFIT</string>
    <string name="org_name">Organization Name</string>
    <string name="search_hint">Enter Keyword, State, or Label</string>
    <string name="ein_label">EIN</string>
    <string name="city_label">City</string>
    <string name="state_label">State</string>
    <string name="search_label">Search</string>
    <string name="loading_screen_label">This App contains 10MB of joy</string>
    <string name="cannot_login_error">Cannot Login</string>
    <string name="loging_in_label">Logging in...</string>

    <string name="please_wait">Please wait...</string>
    <string name="search">Search</string>
    <string name="dodolar_amount">DoDollar Amount</string>
    <string name="type_a_message_here">type a message here...</string>
    <string name="send_anonimously">Send anonymously</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="confirmation_upper">CONFIRMATION</string>
    <string name="an_email_will_be_sent">An email will be sent to</string>
    <string name="within_tf_hours">within 24 hours</string>
    <string name="tell_your_friends">Tell your friends!</string>
    <string name="quote_start">I just gave</string>
    <string name="quote_end">\nDownload DoTopia so you can give too!</string>
    <string name="amount_missing_error_string">Please select an amount to give.</string>
    <string name="balance">Balance</string>
    <string name="given_this_year">Given this year</string>
    <string name="given_last_year">Given last yeasr</string>
    <string name="total_given">Total given</string>
    <string name="pending">Pending</string>
    <string name="search_title">Search</string>
</resources>
