<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_non_profit_label"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/dotopia_black"/>

    <EditText
        android:id="@+id/et_organization_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_header"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:hint="@string/org_name"
        android:singleLine="true"
        android:background="@drawable/edit_text_background"/>
    <EditText
        android:id="@+id/et_ein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_organization_name"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:hint="@string/ein_label"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_ein"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:hint="@string/city_label"
        android:singleLine="true"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/et_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_city"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:hint="@string/state_label"
        android:singleLine="true"
        android:background="@drawable/edit_text_background"/>

    <com.augeo.dotopia.ui.views.DoTopiaShadowButton
        android:id="@+id/but_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_state"
        android:layout_marginTop="@dimen/vertical_margin"
        app:text="@string/search_label"
        app:text_size="10sp"/>
</RelativeLayout>