<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/content_padding">
    <LinearLayout
        android:id="@+id/values_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/labels_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dotopia_orange"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:text="@string/balance"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:text="@string/given_this_year"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:text="@string/given_last_year"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/total_given"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/labels_container"
            android:gravity="left">
            <TextView
                android:id="@+id/tv_balance_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dotopia_light_blue"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_dodollar_blue"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:text="20"/>
            <TextView
                android:id="@+id/tv_given_this_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dotopia_light_blue"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_dodollar_blue"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:text="75"/>
            <TextView
                android:id="@+id/tv_given_last_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dotopia_light_blue"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_dodollar_blue"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:text="500"/>
            <TextView
                android:id="@+id/tv_total_give"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dotopia_light_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_dodollar_blue"
                android:text="475"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/values_container"
        android:layout_alignParentBottom="true"
        android:divider="@color/dotopia_light_blue"
        android:dividerHeight="1dp"/>
</RelativeLayout>