<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingTop="@dimen/vertical_margin">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_main_logo"
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_above="@+id/tv_contact_us">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_hello_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hello John Smith"/>
            <TextView
                android:id="@+id/tv_do_dollar_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DoDollar Balance: 20"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dotopia_light_blue"/>
            <LinearLayout
                android:id="@+id/user_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_icon_size">
                <FrameLayout
                    android:id="@+id/fl_icon_container"
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/home_icon_size"
                    android:layout_height="@dimen/home_icon_size">
                    <ImageView
                        android:id="@+id/iv_account_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"/>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/account_upper"
                    android:textColor="@color/dotopia_orange"
                    android:textSize="22sp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dotopia_light_blue"/>
            <LinearLayout
                android:id="@+id/give_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_icon_size"
                android:layout_gravity="center_vertical">
                <FrameLayout
                    android:layout_width="@dimen/home_icon_size"
                    android:layout_height="@dimen/home_icon_size">
                    <ImageView
                        android:src="@drawable/ic_give"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"/>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/give_upper"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/dotopia_orange"
                    android:textSize="22sp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dotopia_light_blue"/>
            <LinearLayout
                android:id="@+id/gift_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_icon_size"
                android:layout_gravity="center_vertical">
                <FrameLayout
                    android:layout_width="@dimen/home_icon_size"
                    android:layout_height="@dimen/home_icon_size">
                    <ImageView
                        android:src="@drawable/ic_gift"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"/>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gift_upper"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/dotopia_orange"
                    android:textSize="22sp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dotopia_light_blue"/>
            <LinearLayout
                android:id="@+id/redeem_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_icon_size"
                android:layout_gravity="center_vertical">
                <FrameLayout
                    android:layout_width="@dimen/home_icon_size"
                    android:layout_height="@dimen/home_icon_size">
                    <ImageView
                        android:src="@drawable/ic_redeem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"/>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redeem_upper"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/dotopia_orange"
                    android:textSize="22sp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dotopia_light_blue"/>
            <LinearLayout
                android:id="@+id/buy_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_icon_size"
                android:layout_gravity="center_vertical">
                <FrameLayout
                    android:layout_width="@dimen/home_icon_size"
                    android:layout_height="@dimen/home_icon_size">
                    <ImageView
                        android:src="@drawable/ic_buy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"/>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_upper"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/dotopia_orange"
                    android:textSize="22sp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dotopia_light_blue"/>
        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/tv_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:layout_alignParentBottom="true"
        android:textColor="@color/dotopia_black"
        android:textSize="16sp"
        />
</RelativeLayout>